# coinmarketcap-data-collector

./: .gitignore  Cargo.toml
config/: prod.json
src/: cmc_collector.rs  config.rs  database.rs  main.rs  scheduler.rs  types.rs
