[package]
name = "coinmarketcap-data-collector"
version = "0.1.0"
authors = ["yktseng <tanistseng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.3"
tokio-cron-scheduler = "*"
chrono = "0.4"
mongodb = "2.0.0-alpha	"